fixing images not showing

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ hr {
     top: 40%; 
     height: 15%;
     width: 15%;
-    background: url("/files/paper.png");
+    background: url("files/paper.png");
     background-size: contain;
     background-repeat: no-repeat;
     border: 0px;
@@ -59,7 +59,7 @@ hr {
     top: 40%;
     height: 15%;
     width: 15%;
-    background: url("/files/rock.png");
+    background: url("files/rock.png");
     background-size: contain;
     background-repeat: no-repeat;
     border: 0px;
@@ -72,7 +72,7 @@ hr {
     top: 40%;
     height: 15%;
     width: 15%;
-    background: url("/files/scissors.png");
+    background: url("files/scissors.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
